# django

./: .gitignore  db.sqlite3  manage.py  poetry  pyproject.toml
.consultas/: git  poetry
core/: settings.py  urls.py
recipes/: views.py
recipes/templates/recipes/: home.html
school/: admin.py  forms.py  models.py  urls.py  views.py
school/migrations/: 0001_initial.py
static/css/: style.css
templates/: base.html
templates/school/: student_confirm_delete.html  student_form.html  student_list.html
